--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
+  text-align: center; 
+ display: flex;
+ justify-content: center;
+
+ 
 }
 
 .App-logo {
@@ -35,4 +39,23 @@
   to {
     transform: rotate(360deg);
   }
+} 
+
+img{ 
+  width: 300px;  
+  
+}
+
+.memes{ 
+  display: flex; 
+ text-align: center; 
+gap: 20px;
+ margin-top: 100px; 
+
+
+} 
+
+.vote{
+border: solid black;
+
 }
